tests/ui/control-cancel-payload.stderr
error[E0080]: evaluation panicked: control labels require capability payloads
 --> src/global/program.rs
  |
  |         crate::global::const_dsl::const_send_typed::<From, To, Msg, LANE>(),
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::g::advanced::steps::StepCons<hibana::g::advanced::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<1>, hibana::global::Message<hibana::global::LabelMarker<60>, ()>>, hibana::g::advanced::steps::StepNil> as hibana::global::program::BuildProgramSource>::SOURCE` failed inside this call
  |
note: inside `hibana::global::const_dsl::const_send_typed::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<60>, ()>, 0>`
 --> src/global/const_dsl.rs
  |
  |         panic!("control labels require capability payloads");
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |         let _ = <Steps as BuildProgramSource>::SOURCE.scope_budget();
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> tests/ui/control-cancel-payload.rs:11:13
   |
11 |     let _ = BAD;
   |             ^^^
